--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+button {
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    padding: 15px;
+    font-size: 12px;
+    box-shadow: 2px 2px 4px grey;
+}
